--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
 
 header {
 	background-color:#d6cfc0;
-	$zindex-fixed: 1030 !default;
-	z-index:310;
+	z-index:1030;
 	width:100%;
 	position:fixed;
+}
+
+header a {
+	color:#3D3D3D;
+	font-size:20px;
 }
 
 header ul {
@@ -22,7 +26,7 @@ header li {
 }
 
 body {
-	font-family:‘Montserrat’, sans-serif;
+	font-family:"Montserrat", sans-serif;
 	background-color:#ffffff;
 	margin:0;
 	padding:0;
@@ -42,31 +46,49 @@ h2 {
 	font-size:30px;
 }
 
+.h6, h6 {
+    font-size: 12px;
+    font-family:'Montserrat';
+}
+
+hr {
+	text-align:center;
+	width:50%;
+	color:#3d3d3d;
+}
+
 p {
 	font-family:'Montserrat';
 	font-size:14px;
+	text-align:justify;
 }
 
 footer {
-	text-align:center;
 	background-color:#d6cfc0;
 	font-size:13px;
 	font-family:'Montserrat';
 	padding:20px 10px 2px 10px;
 }
 
-#site-logo{
-	text-align:center;
-	padding-top:40px;
-}
-
-
 ol ol, ol ul, ul ol, ul ul {
 	list-style:none;
 }
 
-.h6, h6 {
-    font-size: 12px;
+a {
+	color:#3D3D3D;
+}
+
+a:hover {
+	color:#FF7895;
+}
+
+#text-footer{
+	text-align:center;
+}
+
+#site-logo{
+	text-align:center;
+	padding-top:40px;
 }
 
 #menu-deroulant, #menu-deroulant ul {
@@ -80,10 +102,12 @@ ol ol, ol ul, ul ol, ul ul {
   vertical-align: top;
   position: relative;
 }
+
 #menu-deroulant li li {
   display:inherit;
   background-color:#ffffff;
 }
+
 #menu-deroulant a {
   display:block;
   padding:5px 50px;
@@ -109,29 +133,32 @@ ol ol, ol ul, ul ol, ul ul {
   min-width: 0;
   transition: 0.3s all;
 }
-#menu-deroulant ul li:hover ul {
-  max-width: 30em;
-  color:#FF7895;
-}
+
 #menu-deroulant ul li {
   max-height:0;
   overflow: hidden;
   transition:all 0.5s;
 }
+
 #menu-deroulant li li li {
   max-height: inherit;
 }
+
 #menu-deroulant li:hover li {
   max-height: 15em;
   overflow: visible;
   color:#FF7895;
 }
 
+#menu-deroulant a:hover{
+	color:#FF7895;
+	background-color:#3d3d3d;
+}
+
 .slideshow {
 	margin-left:60px;
 	margin-top:30px;
 }
-
 
 .text-slide-1, .text-slide-2, .text-slide-3 {
 	text-align:justify;
@@ -159,40 +186,40 @@ ol ol, ol ul, ul ol, ul ul {
 	top:1450px;
 }
 
-
-header a {
-	color:#3D3D3D;
-	font-size:20px;
-	padding-right:10px;
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-#twitter {
-	padding-right:40px;
+
+#instagram-header, #youtube-header, #facebook-header, #twitter{
+	padding-right:8px;
 }
 
-#search{
-	margin-right:20px;
+input[type=text] {
+    width: 130px;
+    box-sizing: border-box;
+    font-size: 14px;
+    background-color: #d6cfc0;
+    background-image: url('Images/search.png');
+    background-position:left;
+    background-repeat: no-repeat;
+    padding-right: 20px;
+    padding-left:30px;
+    margin-left:50px;
+    margin-top:3px;
+
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    border:none;
+    outline:none;
 }
 
-.instagram, .newsletter{
-	text-align: center;
-	margin-top:50px;
-	margin-bottom:50px;
-	font-family:'Montserrat';
-	font-size: 10px;
-}
-
-a:hover {
-	color:#FF7895;
-}
-
-a {
-	color:#3D3D3D;
-}
-
-#menu-deroulant a:hover{
-	color:#FF7895;
-	background-color:#3d3d3d;
+input[type=text]:focus {
+    width: 100%;
+    background-color:white;
 }
 
 .carousel-caption {
@@ -216,26 +243,92 @@ a {
 }
 
 .carousel-indicators li {
-	background-color:#d6cfc0;
+	background-color:#3d3d3d;
+}
+
+.carousel-control-prev-icon{
+	background-image:url("Images/arrow-left.png");
+	width:25px;
+}
+
+.carousel-control-prev-icon:hover{
+	background-image:url("Images/arrow-left-hover.png");
+	width:25px;
+}
+
+.carousel-control-next-icon{
+	background-image:url("Images/arrow-right.png");
+	width:25px;
+}
+
+.carousel-control-next-icon:hover{
+	background-image:url("Images/arrow-right-hover.png");
+	width:25px;
+}
+
+.navbar-dark .navbar-toggler-icon{
+	background-image:url("Images/menu-burger.png");
+	width:27px;
 }
 
 .btn-primary {
     color: #3d3d3d;
-    background-color: #ffffff;
-    border-color: #ffffff;
+    background-color: #d6cfc0;
+    border:none;
+    font-family:'Montserrat';
 }
 
 .btn-primary:hover{
     color: #FF7895;
-    background-color: #ffffff;
-    border-color: #ffffff;
+    background-color: #d6cfc0;
+    border:none;
+	font-family:'Montserrat';
 }
 
-hr {
+.btn{
+	margin-left:40%;
+    font-family:'Montserrat';
+}
+
+.instagram{
+	text-align: center;
+	margin-top:50px;
+	margin-bottom:50px;
+	font-family:'Montserrat';
+	font-size: 10px;
+}
+
+#text-instagram{
 	text-align:center;
-	size:2px;
-	width:50%;
+}
+
+#newsletter-title {
+	text-align:center;
+	padding-top:10%;
+	color:white;
+}
+
+#newsletter-text{
+	margin:2em;
+	color:white;
+}
+
+#newsletter-background{
+	background-color:#3d3d3d;
+}
+
+#about-me-title{
+	color:#FF7895;
+}
+
+#about-me-text{
+	margin:2em;
 	color:#3d3d3d;
+	padding-top:5%;
+}
+
+#about-me-photo{
+	border-radius:100%;
 }
 
 .overlay-container {
@@ -254,13 +347,15 @@ hr {
  display:none;
  background-color:#FFFBF3;
  opacity:0.8;
-
 }
 
 .overlay-container:hover .overlay{
  display:block;
 }
 
+#besides-kimchi-photo{
+	width:100%;
+}
 
 .bg-dark {
    flex-direction: column;
@@ -283,6 +378,7 @@ hr {
 
 	h2 {
 		font-size:1.5em;
+		padding-left:10px;
 	}
 
 	p {
@@ -294,6 +390,36 @@ hr {
 	#menu-deroulant ul li a {
 		font-size:12px;
 	}
+
+	.col-md-3{
+		text-align:center;
+	}	
+
+	#about-me-text{
+		padding-right:10px;
+	}
+
+	.slideshow{
+		margin-left:0px;
+	}
+}
+
+#myBtn {
+    display: none; 
+    position: fixed; 
+    bottom: 20px;
+    right: 10px; 
+    z-index: 100; 
+    border: none; 
+    outline: none; 
+    background-color: transparent; 
+    padding: 15px; 
+    border-radius: 10px; 
+    cursor:pointer;
+}
+
+#myBtn:hover {
+    color: #FF7895; 
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -303,27 +429,68 @@ hr {
     bottom: 5em;
     left: 30%;
 	}
-}
 
-@media (min-width: 768px) and (max-width: 991px) {
 	.navbar {
 	margin-left:2em;
+	font-size:14px;
+	}
+
+	#menu-deroulant ul li a{
+		text-align:center;
 	}
 }
 
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    padding:5px 50px;
+	font-family: "Montserrat";
+	color:#3d3d3d;
+}
+
+.popuptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: #d6cfc0;
+    color: #3d3d3d;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.popup .show {
+    visibility: visible;
+}
+
 .form-control {
+	font-family:'Montserrat';
     display: block;
     padding: .5rem .75rem;
-    font-size: 10px;
+    font-size: 12px;
     line-height: 1.25;
-    color: #495057;
+    color: #3d3d3d;
     background-color: #fff;
     background-image: none;
     background-clip: padding-box;
     border: 1px solid rgba(0,0,0,.15);
     border-radius: .25rem;
-    width:20%;
-    margin-left:55%;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-
+}
 
